--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/newfavicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Alicia Coquérant - dev web et mobile</title>
+    <style media="screen, print">
+      @font-face {
+        font-family: "Phitagate";
+        src: url("./src/assets/fonts/Phitagate-Regular.otf");
+        /* Font can be found on Dafont : Phitagate by Ronny Studio */
+      }
+      @font-face {
+        font-family: "Magic Bright Bold";
+        src: url("./src/assets/fonts/Magic Bright Serif Bold.otf");
+        /* Font can be found on Dafont : Magic Bright by Letterflow */
+      }
+      @font-face {
+        font-family: "Magic Bright Regular";
+        src: url("./src/assets/fonts/Magic Bright Serif Regular.otf");
+        /* Font can be found on Dafont : Magic Bright by Letterflow */
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
