--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/newfavicon.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/src/assets/img/newfavicon.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alicia Coquérant - dev web et mobile</title>
     <style media="screen, print">
